--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,7 +17,7 @@ html {
 
 .nav-bar {
   display: flex;
-  width: 960px;
+  max-width: 960px;
   background-color: cadetblue;
   margin: 0 auto 10rem auto;
   padding: 2rem 1rem;
@@ -58,6 +58,7 @@ h1 {
   line-height: 1.2;
   background-color: white;
   padding: 1.5rem 5rem;
+  margin-right: -2rem;
   display: inline-block;
 }
 
@@ -65,12 +66,67 @@ h1 {
 
 .services {
   display: flex;
-  width: 960px;
-  margin: 0 auto;
   justify-content: center;
 }
 
 .icon {
-  width: 30%;
+  width: 5rem;
   height: 8rem;
+  margin: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;;
+  align-items: center;
+  text-align: center;
+  line-height: 1.4;
+}
+
+.icon img {
+  width: 5rem;
+}
+
+.icon img.paper-icon {
+  width: 3.5rem;
+}
+
+.supporting-info {
+  display: flex;
+  justify-content: center;
+}
+
+.info {
+  width: 35%;
+  margin-right: 5%;
+  line-height: 1.4;
+}
+
+.box-heading {
+  background-color: cadetblue;
+  color: white;
+  font-weight: bold;
+  width: 10rem;
+  padding: 0.5rem 1.25rem;
+}
+
+.text-block {
+  display: inline-block;
+  margin-top: 1rem;
+  margin-bottom: 5rem;
+}
+
+.container {
+  max-width: 960px;
+  margin: auto;
+}
+
+footer {
+  background-color: cadetblue;
+  padding: 4rem;
+  display: flex;
+  align-items: center;
+}
+
+footer img {
+  height: 1.5rem;
+  margin-right: 1rem;
 }
