mostly done responsive versions

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -130,3 +130,28 @@ footer img {
   height: 1.5rem;
   margin-right: 1rem;
 }
+
+@media only screen and (max-width: 1024px) {
+  .banner-image {
+    padding-top: 0;
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  .nav-bar {
+    width: 100%;
+  }
+
+  .banner-tagline h1 {
+    font-size: 1.33rem;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .services {
+    flex-direction: column;
+    align-items: center;
+  }
+}
